# BallSimulationGL

./: .gitignore  CMakeLists.txt  README.md
src/: Simulator.cpp  Simulator.h  application.cpp  application.hpp  ball.cpp  ball.hpp  ballsimulatorgl.cpp  ballsimulatorgl.hpp  config.h  gl.h  main.cpp  main_cli.cpp  quadtree.h  quadtree.hpp  rectangle.hpp  renderer.cpp  renderer.hpp  simulator.cpp  simulator.h  simulator.hpp  vec2.h  vec2.hpp  world.cpp  world.hpp
